# rust-editor

./: .editorconfig  .gitignore  Cargo.toml  Makefile  NOTES.md  README.md
.github/workflows/: check.yml
benches/: test.rs
bindings/: Cargo.toml
bindings/benches/: test.rs
bindings/src/: command.rs  history.rs  input.rs  lib.rs  modestate.rs  parser.rs  range.rs
clientserver/: Cargo.toml
clientserver/src/: async_pty.rs  client.rs  common.rs  lib.rs  main.rs  p2.rs  process.rs  server.rs
core/: Cargo.toml
core/src/: buffer.rs  config.rs  grapheme_iter.rs  grapheme_step.rs  graphemes.rs  lib.rs  macros.rs  registers.rs  variables.rs
cs2/: Cargo.toml
cs2/src/: main.rs
examples/: unicode.txt
ptytest/: Cargo.toml
ptytest/src/: main.rs
src/: cli.rs  frontend.rs  frontend_crossterm.rs  frontend_debug.rs  frontend_termion.rs  ism.rs  lib.rs  main.rs  scroll.rs  text.rs
src/bindings/: helpers.rs  main.rs  mod.rs  parser.rs
src/text/: app.rs  buffer.rs  bufferblock.rs  bufferlist.rs  bufferview.rs  command.rs  config.rs  cursor.rs  display.rs  editor.rs  format.rs  input.rs  layout.rs  lineworker.rs  linewrap.rs  macros.rs  mod.rs  registers.rs  render.rs  rope_test.rs  rowiter.rs  scroll.rs  search.rs  smart.rs  terminal.rs  test.rs  textbuffer.rs  variables.rs  viewport.rs  viewrow.rs  viewspec.rs  window.rs  wrap.rs
tui/: Cargo.toml
tui/src/: bufferblock.rs  bufferlist.rs  cli.rs  cursor.rs  display.rs  editor.rs  format.rs  layout.rs  lib.rs  lineworker.rs  row.rs  search.rs  terminal.rs  tokens.rs  viewchar.rs
