[package]
name = "editor"
version = "0.0.1"
authors = ["Ryan Sadler <rrsadler@gmail.com>"]
edition = "2018"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ropey = "1.2"
backtrace = "0.3"
#futures = "0.e"
#async-std = "1.9"
#unsegen = "0.2"
#unsegen_signals = "0.2"
#raw_tty = "0.1"
termios = "0.3"
signal-hook = "0.3.4"
#termion = "1.5"
#crossterm = {version = "0.19", features = ["event-stream"]}
crossterm = "0.19"
unicode-segmentation = "1.7"
clap = "2.33.0"
#stderrlog = "0.5"
log = "0.4"
nom = "6.0"
lazy_static = "1.4"
#combine = "4.3.2"
#gamma = "0.8"
#petgraph = "0.5"
pretty_env_logger = "0.4"
#env_logger = "0.8"
#lru = "0.6"
num = "0.4"
crossbeam = "0.8"
parking_lot = "0.11"
editorconfig = "1.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "test"
harness = false

[[bin]]
name = "bindings"
path = "src/bindings/main.rs"



