[package]
name = "editor"
version = "0.0.1"
authors = ["Ryan Sadler <rrsadler@gmail.com>"]
edition = "2021"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ropey = "1.2"
backtrace = "0.3"
signal-hook = "0.3"
crossterm = "0.19"
unicode-segmentation = "1.7"
clap = "2.33.0"
log = "0.4"
nom = "6.1"
lazy_static = "1.4"
pretty_env_logger = "0.4"
num = "0.4"
crossbeam = "0.8"
parking_lot = "0.11"
editorconfig = "1.0"
editor-core = { path = "./core" }
editor-tui = { path = "./tui" }
editor-bindings = { path = "./bindings" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "test"
harness = false

[[bin]]
name = "bindings"
path = "src/bin/bindings.rs"

[[bin]]
name = "editor"
path = "src/bin/editor.rs"

[workspace]
members = ["core", "bindings", "ptytest", "tui"]
