[package]
name = "editor"
version = "0.0.1"
authors = ["Ryan Sadler <rrsadler@gmail.com>"]
edition = "2021"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.19"
log = "0.4"
pretty_env_logger = "0.4"
clap = "3.2.10"
editor-core = { path = "./core" }
editor-tui = { path = "./tui" }
editor-bindings = { path = "./bindings" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "test"
harness = false

[[bin]]
name = "bindings"
path = "src/bin/bindings.rs"

[[bin]]
name = "editor"
path = "src/bin/editor.rs"

[[bin]]
name = "dump"
path = "src/bin/dump.rs"

[workspace]
members = ["core", "bindings", "tui"]
