[package]
name = "editor-bindings"
version = "0.0.1"
authors = ["Ryan Sadler <rrsadler@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
nom = "7.1"
crossterm = "0.26"
editor-core = { path = "../core" }

