[package]
name = "clientserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0"
educe = { version = "0.4", optional = true, default-features = false }
#futures-core = "0.3"
#futures-sink = "0.3"
futures = "0.3"
pin-project = "1"
serde = { version = "1", features = ["derive"] }
bincode-crate = { package = "bincode", version = "1", optional = true }
serde_json = { version = "1", optional = false }
rmp-serde = { version = "0.15", optional = true }
serde_cbor = { version = "0.11" }
impls = "1"
tokio = { version = "1.15", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec"] }
tokio-serde = { version = "0.8", features = ["json", "cbor"] }
daemonize = "0.4"
libc = "0.2"
failure = "0.1"
rustyline = "9.1"
tempdir = "0.3"
tempfile = "3.2"
clap = { version = "3.0.0", features = ["derive", "cargo"] }
env_logger = { version = "0.9" }
log = "0.4"
nix = "0.23"
fork = "0.1"
stdio-override = "0.1"
im = "15"
shlex = "1.1"
ulid = "0.5"
#tokio-pty-process = "0.4"
#tokio-pty-process = { git = "https://github.com/pkgw/stund.git", branch = "master", package = "tokio-pty-process" }

[[bin]]
name = "p"
path = "src/bin/p.rs"

