[package]
name = "editor-core"
version = "0.0.1"
authors = ["Ryan Sadler <rrsadler@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ropey = "1.3"
unicode-segmentation = "1.7"
log = "0.4"
parking_lot = "0.11"
editorconfig = "1.0"
unicode-width = "0.1"

[dev-dependencies]
criterion = "0.3"



