[package]
name = "cs2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0"
educe = { version = "0.4", optional = true, default-features = false }
futures = "0.1.29"
pin-project = "1"
serde = { version = "1", features = ["derive"] }
bincode-crate = { package = "bincode", version = "1", optional = true }
serde_json = { version = "1", optional = false }
rmp-serde = { version = "0.15", optional = true }
serde_cbor = { version = "0.11" }
impls = "1"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec"] }
tokio-serde = { version = "0.8", features = ["json", "cbor"] }
tokio-codec = "0.1.1"
libc = "0.2"
failure = "0.1"
env_logger = { version = "0.9" }
log = "0.4"
tokio-pty-process = "0.4"

