[package]
name = "ptytest"
version = "0.1.0"
authors = ["Ryan Sadler <rrsadler@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
portable-pty = { git = "https://github.com/wez/wezterm.git", branch = "main", package = "portable-pty" }
smol = "1.2"
futures = "0.3"
anyhow = "1.0"
ctrlc = "3.1.6"
async-channel = "1.4.2"
crossbeam = "0.8"
popol = "0.4"
env_logger = { version = "0.6.2", default-features = false }
mio = { version = "0.8", features = ["net", "os-poll"] }

[[bin]]
name = "ptytest"
path = "src/main.rs"



