[package]
name = "editor-tui"
version = "0.0.1"
authors = ["Ryan Sadler <rrsadler@gmail.com>"]
edition = "2021"

[dependencies]
termios = "0.3.3"
ropey = "1.2"
backtrace = "0.3"
signal-hook = "0.3"
crossterm = "0.19"
unicode-segmentation = "1.7"
clap = "2.33.0"
log = "0.4"
nom = "6.1"
lazy_static = "1.4"
pretty_env_logger = "0.4"
num = "0.4"
crossbeam = "0.8"
parking_lot = "0.11"
editorconfig = "1.0"
editor-core = { path = "../core" }
editor-bindings = { path = "../bindings" }

[dev-dependencies]
criterion = "0.3"

