[package]
name = "editor-tui"
version = "0.0.1"
authors = ["Ryan Sadler <rrsadler@gmail.com>"]
edition = "2021"

[dependencies]
termios = "0.3.3"
ropey = "1.3"
backtrace = "0.3"
signal-hook = "0.3"
crossterm = "0.24"
unicode-segmentation = "1.7"
unicode-width = "0.1"
log = "0.4"
lazy_static = "1.4"
num = "0.4"
crossbeam = "0.8"
editorconfig = "1.0"
editor-core = { path = "../core" }
editor-bindings = { path = "../bindings" }

[dev-dependencies]
criterion = "0.3"

